--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 :root{
-    --main-color:#66CC99;
+    --main-color:#112233;
     
     /*black - #112233
     red - #FC575E
@@ -35,6 +35,7 @@ body{
 }
 
 .menu_button{
+    cursor:pointer;
     position: fixed;
     top:20px;
     right:0px;
@@ -59,7 +60,7 @@ body{
     right:10px;
     margin-top:20px;
     padding-top:20px;
-    padding-bottom:30px;
+
     padding-left:20px;
     background:white;
     
@@ -67,6 +68,7 @@ body{
 }
 
 .article .title{
+    display: inline;
     color:var(--main-color);
     font-size:130%;
 }
@@ -89,11 +91,68 @@ body{
 
 .article .content .content_img{
     margin-bottom:20px;
+    margin-top:10px;
 }
 
 .article .content .content_img img{
     width:100%;
     height:auto;
+}
+
+.article .post_footer{
+    margin-top:10px;
+    position:relative;
+    height:60px;
+    background:var(--main-color);
+    color:white;
+}
+
+.post_rate{
+    padding-top:5px;
+    padding-left:10px;
+}
+
+.post_rate .plus{
+    cursor:pointer;
+    display:inline;
+    transition:all 1000ms linear;
+    font-size:110%;
+}
+
+.post_rate .plus:hover{
+    color:#66CC99;
+    font-weight:bold;
+}
+
+.post_rate .minus{
+    cursor:pointer;
+    display:inline;
+    transition:all 200ms linear;
+    font-size:110%;
+}
+
+.post_rate .minus:hover{
+    color:#FC575E;
+    font-weight:bold;
+}
+
+.article .post_footer .posted_by{
+    padding-top:5px;
+    padding-left:10px;
+    
+    font-size:90%;
+}
+
+.article .post_footer .posted_by img{
+    border-radius:100%;
+    width:20px;
+    height:20px;
+}
+
+.article #username{
+    color:inherit;
+    text-decoration:none;
+    font-weight:bold;
 }
 
 #page{
@@ -157,6 +216,12 @@ body{
     margin-left:auto;
     margin-right:auto;
 }
+
+.article .post_footer{
+    left:-20px;
+    margin-right:-60px;
+}
+
 }
 
 @media only screen and (max-width: 700px){ /* Для телефонов */
@@ -170,4 +235,10 @@ body{
     margin-left:auto;
     margin-right:auto;
 }
+
+.article .post_footer{
+    left:-20px;
+    margin-right:-40px;
+}
+
 }
